Added collision detection, changed GameObject to sprites

--- a/CIS29_Project.vcxproj
+++ b/CIS29_Project.vcxproj
@@ -149,6 +149,9 @@
     <None Include=".gitignore" />
     <None Include="README.md" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="resourses\texture\spaceSprites.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
