--- a/CIS29_Project.vcxproj
+++ b/CIS29_Project.vcxproj
@@ -140,11 +140,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\BaseException.cpp" />
+    <ClCompile Include="src\Boss.cpp" />
     <ClCompile Include="src\Collision.cpp" />
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
     <ClCompile Include="src\GameText.cpp" />
+    <ClCompile Include="src\GameWindow.cpp" />
     <ClCompile Include="src\HealthRestore.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Menu.cpp" />
@@ -154,16 +156,19 @@
     <ClCompile Include="src\PowerUp.cpp" />
     <ClCompile Include="src\Projectile.cpp" />
     <ClCompile Include="src\Shield.cpp" />
+    <ClCompile Include="src\ShipSelection.cpp" />
     <ClCompile Include="src\TextureNotLoaded.cpp" />
     <ClCompile Include="src\ToolBar.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseException.h" />
+    <ClInclude Include="src\Boss.hpp" />
     <ClInclude Include="src\Collision.h" />
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.hpp" />
     <ClInclude Include="src\GameText.hpp" />
+    <ClInclude Include="src\GameWindow.hpp" />
     <ClInclude Include="src\HealthRestore.h" />
     <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Options.h" />
@@ -172,6 +177,7 @@
     <ClInclude Include="src\PowerUp.h" />
     <ClInclude Include="src\Projectile.h" />
     <ClInclude Include="src\Shield.h" />
+    <ClInclude Include="src\ShipSelection.hpp" />
     <ClInclude Include="src\TextureNotLoaded.h" />
     <ClInclude Include="src\ToolBar.hpp" />
   </ItemGroup>
