--- a/CIS29_Project.vcxproj.filters
+++ b/CIS29_Project.vcxproj.filters
@@ -85,9 +85,6 @@
     <ClCompile Include="src\Shield.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\TextureNotLoaded.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\ToolBar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -107,6 +104,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ShowHighscore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ResourceNotLoaded.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -156,9 +156,6 @@
     <ClInclude Include="src\ShipSelection.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\TextureNotLoaded.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\ToolBar.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -187,6 +184,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\InputHighscore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ResourceNotLoaded.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
