Added enemy hp bar and boss movement

--- a/CIS29_Project.vcxproj
+++ b/CIS29_Project.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\Enemy.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\GameObject.cpp" />
+    <ClCompile Include="src\GameText.cpp" />
     <ClCompile Include="src\HealthRestore.cpp" />
     <ClCompile Include="src\InputHighscore.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="src\Enemy.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\GameObject.hpp" />
+    <ClInclude Include="src\GameText.hpp" />
     <ClInclude Include="src\HealthRestore.h" />
     <ClInclude Include="src\InputHighscore.h" />
     <ClInclude Include="src\Menu.h" />
