--- a/CIS29_Project.vcxproj.filters
+++ b/CIS29_Project.vcxproj.filters
@@ -109,6 +109,9 @@
     <ClCompile Include="src\ResourceNotLoaded.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GameText.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\BaseException.h">
@@ -165,9 +168,6 @@
     <ClInclude Include="src\Menu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\TextureNotLoaded.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\BaseException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -187,6 +187,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ResourceNotLoaded.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GameText.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
